# distributed-tracing-example

./: .gitmodules  CMakeLists.txt  README.md  build.sh
cmake_modules/: BuildJaegerClient.cmake  BuildOpenTracing.cmake
src/: CMakeLists.txt  main.cc
src/dist_tracing/: CMakeLists.txt  Carrier.cc  Carrier.h  TracerPlugin.cc  TracerPlugin.h
src/dist_tracing/jaeger/: JaegerTracerPlugin.h
src/dist_tracing/mock/: MockTracerPlugin.h
